[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GUI/HelpMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Background/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Styles/Button_Styles/Hover_Button_Style.stylebox" type="StyleBox" id=3]
[ext_resource path="res://Assets/Styles/Button_Styles/Normal_Button_Style.stylebox" type="StyleBox" id=4]
[ext_resource path="res://Assets/Fonts/PixelFont/PixelFont.tres" type="DynamicFont" id=5]

[node name="HelpMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 115.754, 64.6993 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 48.9908
margin_top = 34.8589
margin_right = 206.991
margin_bottom = 96.8589

[node name="Enemies" type="Button" parent="VBoxContainer"]
margin_right = 158.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Enemies"

[node name="Powerups" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 158.0
margin_bottom = 44.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = " Powerups "

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 158.0
margin_bottom = 68.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/Enemies" to="." method="_on_Enemies_pressed"]
[connection signal="pressed" from="VBoxContainer/Powerups" to="." method="_on_Powerups_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
